@@ -266,8 +266,10 @@ public final class POP3MessageStorage extends MailMessageStorage {
         final int id = account.getId();
         for (int i = 0; i < mailMessages.length; i++) {
             final MailMessage mailMessage = mailMessages[i];
-            mailMessage.setAccountId(id);
-            mailMessage.setAccountName(name);
+            if (null != mailMessage) {
+                mailMessage.setAccountId(id);
+                mailMessage.setAccountName(name);
+            }
         }
     }
 
@@ -278,10 +280,12 @@ public final class POP3MessageStorage extends MailMessageStorage {
      * @throws OXException If mail account cannot be obtained
      */
     private void setAccountInfo(final MailMessage mailMessage) throws OXException {
-        final MailAccount account = getMailAccount();
-        final String name = account.getName();
-        final int id = account.getId();
-        mailMessage.setAccountId(id);
-        mailMessage.setAccountName(name);
+        if (null != mailMessage) {
+            final MailAccount account = getMailAccount();
+            final String name = account.getName();
+            final int id = account.getId();
+            mailMessage.setAccountId(id);
+            mailMessage.setAccountName(name);
+        }
     }
 }
