@@ -1,3 +1,8 @@
+* 2013-04-28 - thorben.betten@open-xchange.com
+
+ - Fix for bug 26166: Deal with possible null reference returned by
+                      "com.openexchange.mail.api.IMailMessageStorage.getMessage(String, String, boolean)"
+
 * 2013-04-27 - thorben.betten@open-xchange.com
 
  - Fix for bug 26237: Fixed possible XSS vulnerability
